fix: fix css for jumping clock

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,12 +18,20 @@ main {
   height: 90vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+}
+main .clock {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  width: 900px;
+  height: 224px;
 }
 
 .clock {
-  margin-top: 1.5rem;
   font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
@@ -39,14 +47,12 @@ main {
   line-height: 1;
 }
 
-.greeting,
-.name {
+.greeting {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
   font-size: 4rem;
   line-height: 0.8;
-  letter-spacing: 0em;
 }
 
 /*# sourceMappingURL=style.css.map */
